# medulla

./: .gitignore  CMakeLists.txt
analysisTools/: CMakeLists.txt
analysisTools/include/: analysis_tree.h  cut_sequence.h  plot_structs.h  yell_try_die.h
analysisTools/src/: analysis_tree.cc  cut_sequence.cc  plot_structs.cc  run_analysis_gOre.cc  run_analysis_gOre_OLD.cc
batch/: medulla.py  submit.sh  sys_template.toml  utilities.py
cafana/include/: particle_utilities.h  particle_variables.h  sig_bkg.h  utilities.h  yell_try_die.h
cafana/include/analysisTools/: analysis_tree.cpp  analysis_tree.h
cafana/include/nc/: core_gOre.h  cuts_gOre.h  cuts_nc.h  utils_gOre.h  vars_gOre.h  vars_nc.h
cafana/macros/icarus/: nc_1gamma.C
cafana/macros/icarus/gOre/: nc_gOre.C  nc_gOre_systs.C  nc_gOre_train.C
cafana/macros/plot/: run_analysis_gOre.cc
selection/include/: cuts.h  event_variables.h  particle_utilities.h  particle_variables.h  utilities.h  variables.h
selection/include/anatools/: cut_sequence.h  plot_structs.cpp
selection/include/gOre/: core_gOre.h  cuts_gOre.h  event_cuts_gOre.h  event_vars_gOre.h  particle_vars_gOre.h  scorers_gOre.h  selectors_gOre.h  utils_gOre.h  vars_gOre.h
selection/src/: main.cc
selection/toml/: gOre.toml  gOre_1g0p_1g1p.toml  gOre_cvext.toml  gOre_debug.toml  gOre_pion_veto.toml  gOre_topo.toml  gOre_topo_customPID.toml  gOre_topo_slim.toml
spineplot/: spectra1d.py  spectra2d.py  variable.py
spineplot/anatools/: cut_sequence.cpp  plot_structs.h
spineplot/examples/: example.ipynb
systematics/src/: main.cc  trees.cc
tutorial/: tutorial.md
tutorial/examples/: example01_ccqe.toml  example03_cccoh.toml
